--- a/static/index.html
+++ b/static/index.html
@@ -14,8 +14,7 @@
         with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless
         required by applicable law or agreed to in writing, software distributed under the License is distributed on
         an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for
-        the specific language governing permissions and limitations under the License. 
-    "/>
+        the specific language governing permissions and limitations under the License. "/>
     <script src=" json2.js">
     </script>
 </head>
@@ -122,7 +121,9 @@
         function addEntity(entity, data) {
             world[entity] = data;
             drawNextFrame(); // (but should we?)
-            //XXX: Send a XHTML Request that updates the entity you just modified!
+            socket.send(JSON.stringify({
+                [entity]: data,
+            }));
         }
         var counter = 0;
         function addEntityWithoutName(data) {
@@ -253,7 +254,7 @@
             var url = "ws://" + host + "/subscribe";
             socket = new WebSocket(url);
             socket.onopen = function () {
-                //XXX: TODO What are you going to do here?
+                debug("WebSocket Opened");
             };
             socket.onerror = function (msg) {
                 debug("WebSocket Error:" + msg.data);
@@ -261,7 +262,11 @@
             socket.onmessage = function (msg) {
                 try {
                     debug("WebSocket Recv:" + msg.data);
-                    //XXX: TODO What are you going to do here?            
+                    data = JSON.parse(msg.data);
+                    for (let key in data) {
+                        world[key] = data[key];
+                    }
+                    drawNextFrame();
                 } catch (e) {
                     alert("socket on message: " + e);
                 }
